# Spectral

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  main  main.cpp  test_element.cpp  test_suite.cpp
MachineLearning/: infer.py  requirements.txt  train.py
MachineLearning/data/: gll.py  loader.py  sod_exact.py
MachineLearning/labels/: optimal_eps.py  sem1d.py
MachineLearning/models/: mlp.py
lib/base/: element.cpp  element.h  gll.cpp  gll.h
lib/diffusion/: diffusion.cpp  diffusion.h
lib/math/: math.cpp  math.h
lib/phy/: physics.cpp  physics.h
lib/space/: element.cpp  element.h  mesh.cpp  mesh.h
lib/time/: rk4.cpp  rk4.h
neural/: activation.cpp  activation.h  container.h  layer.cpp  layer.h  loss_function.cpp  loss_function.h  main_neural.cpp  network.h  tensor.h
tests/: test_element.cpp  test_suite  test_suite.cpp
vtune/Spectral1D/: Spectral1D.vtuneproj
vtune/Spectral1D/r000ps/: basecase.vtune
vtune/Spectral1D/r000ps/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
vtune/Spectral1D/r000ps/data.0/: 3091.stat.perf  map.events  perfcmd  sep.events  systemcollector-3081-computer.sc
vtune/Spectral1D/r000ps/sqlite-db/: dicer.db
vtune/Spectral1D/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
vtune/Spectral1D/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
vtune/Spectral1D/r000ps/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
vtune/Spectral1D/r000ps/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
vtune/Spectral1D/r000ps/sqlite-db/pmu_data/: container.metadata
vtune/Spectral1D/r000ps/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
vtune/Spectral1D/r000ps/sqlite-db/timelinedb/: directory.xml
vtune/Spectral1D/r001hs/: hotspot.vtune
vtune/Spectral1D/r001hs/config/: context_values.cfg  log.cfg  runss.options  state.cfg
vtune/Spectral1D/r001hs/data.0/: 1260-1271.0-1271.0.th  1260-1271.0-1271.0.th.aux  1260-1271.0-1289.0.th  1260-1271.0-1289.0.th.aux  1260-1271.0-1290.0.th  1260-1271.0-1290.0.th.aux  1260-1271.0-1291.0.th  1260-1271.0-1291.0.th.aux  1260-1271.0-1292.0.th  1260-1271.0-1292.0.th.aux  1260-1271.0-1293.0.th  1260-1271.0-1293.0.th.aux  1260-1271.0-1294.0.th  1260-1271.0-1294.0.th.aux  1260-1271.0-1295.0.th  1260-1271.0-1295.0.th.aux  1260-1271.0.trace  1271.stat.perf  perfcmd  systemcollector-1260-computer.sc
vtune/Spectral1D/r001hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
vtune/Spectral1D/r001hs/sqlite-db/timelinedb/: directory.xml
(+12 files in other folders)
