cmake_minimum_required(VERSION 3.10)
project (spectral)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(BLAS REQUIRED)
find_package( Boost 1.40 COMPONENTS program_options REQUIRED )
set(elem "lib/space/element.cpp" "lib/space/mesh.cpp")
set(phy "lib/phy/physics.cpp")
set(base "lib/base/gll.cpp")
set(math "lib/math/math.cpp")
set(time "lib/time/rk4.cpp")
add_executable(spectral "main.cpp" ${elem} ${phy} ${math} ${time} ${base})
target_link_libraries(spectral ${BLAS_LIBRARIES} ${Boost_LIBRARIES})
